# ai-crypto-wallet

./: .gitignore  .~lock.gemini_summary.md#  CopilotInstructions.md  GEMINI.md  Makefile  NEXT_STEPS.md  PROGRESS.md  RUN.md
backend/: __init__.py
backend/core/: __init__.py  indicators.py  risk.py
backend/db/: models.py  schema.sql
fastapi/: GEMINI.md  conftest.py  pyproject.toml
fastapi/ai_crypto_wallet_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
fastapi/app/: bootstrap.py  config.py  db.py  main.py  schemas.py  seed.py
fastapi/app/api/v1/: routes_approvals.py  routes_meta.py  routes_wallet.py
fastapi/app/tests/: test_api_approval.py  test_api_endpoints.py  test_core_indicators.py  test_core_risk.py  test_health.py
web/: GEMINI.md  package-lock.json
web/src/: App.tsx  main.tsx
web/src/components/: ApprovalModal.tsx  BalanceCard.tsx  RiskBar.tsx  SuggestionList.tsx
web/src/lib/: api.ts
web/src/pages/: Dashboard.tsx  History.tsx  Overview.tsx  Settings.tsx  Suggestions.tsx
