[project]
name = "ai-crypto-wallet-api"
version = "0.1.0"
description = "AI Crypto Wallet — FastAPI backend (Milestone 0)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic-settings>=2.4.0",
]
[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0", "ruff>=0.5.0"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E","F","I","B"]
